@startuml
' Configuration
hide empty members
skinparam shadowing false
skinparam handwritten false
skinparam monochrome false
skinparam linetype ortho
skinparam class {
    BackgroundColor<<Clickable>> #E3F2FD
    BorderColor<<Clickable>> #1976D2
    HeaderBackgroundColor<<Clickable>> #BBDEFB
    FontSize 12
    AttributeFontSize 11
    AttributeFontColor #333333
    BorderThickness 1
}
skinparam interface {
    BackgroundColor<<Clickable>> #F1F8E9
    BorderColor<<Clickable>> #689F38
    HeaderBackgroundColor<<Clickable>> #DCEDC8
    FontSize 12
    AttributeFontSize 11
    AttributeFontColor #333333
    BorderThickness 1
}
skinparam arrow {
    Color #666666
    FontSize 11
    Thickness 1
}
package SampleApp.Interfaces {
interface IEmployee <<Clickable>> [[file:///D:/Projects/presentation/SampleApp/SampleApp/Interfaces/IEmployee.cs]] {
    + EmployeeId : string
    + Salary : decimal
    + CalculateYearlyBonus()
}

}
package SampleApp.Models {
class Address <<Clickable>> [[file:///D:/Projects/presentation/SampleApp/SampleApp/Models/Address.cs]] {
    + Street : string
    + City : string
    + State : string
    + ZipCode : string
}

class Department <<Clickable>> [[file:///D:/Projects/presentation/SampleApp/SampleApp/Models/Department.cs]] {
    + Name : string
    + Manager : Employee
    + Employees : List<Employee>
}

class Employee <<Clickable>> [[file:///D:/Projects/presentation/SampleApp/SampleApp/Models/Employee.cs]] {
    + EmployeeId : string
    + Department : Department
    + Salary : decimal
    + CalculateYearlyBonus() : decimal
}

class Person <<Clickable>> [[file:///D:/Projects/presentation/SampleApp/SampleApp/Models/Person.cs]] {
    - _id : string
    + FirstName : string
    + LastName : string
    + Age : int
    + HomeAddress : Address
    + GetFullName() : string
}

}
package SampleApp.Services {
class EmployeeService <<Clickable>> [[file:///D:/Projects/presentation/SampleApp/SampleApp/Services/EmployeeService.cs]] {
    - _employees : List<Employee>
    - _department : Department
    + AddEmployee() : void
    + GetEmployeeById() : Employee
}

}

' Relationships
Employee --|> Person
Employee --|> IEmployee
Department --> Employee : has
Employee --> Department : has
Person --> Address : has
EmployeeService --> Department : has
@enduml
